[package]
name = "crox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
argh = "0.1.10"
miette = { version = "5.10.0", features = ["fancy"] }
rustyline = { version = "12.0.0", features = ["derive"] }
scc = "1.9.0"
sharded-slab = "0.1.4"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"
zerocopy = { version = "0.6.1", features = ["alloc", "simd"] }

[dev-dependencies]
bytemuck = "1.14.0"
pretty_assertions = "1.3.0"
